# manga-recs

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TESTING_GUIDE.md  TESTING_QUICK_REF.md  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
configs/: base.toml  local.example.toml
data-engineering/ingestion/: api_client.py
data-engineering/ingestion/graphql-queries/: manga_metadata.graphql
data/cleaned/: cleaned_manga_metadata.parquet  cleaned_user_readdata.parquet
data/features/: manga_features.parquet  user_features.parquet
docs/: README.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: SETUP.md
frontend/: README.md  eslint.config.js  package-lock.json  package.json
frontend/pages/: index.jsx
frontend/pages/api/: recommendations.ts
frontend/styles/: globals.css
ingestion/: api_client.py  pull_manga.py  pull_userdata.py  run_fetch.py  run_ingestion.py
notebooks/: base_models.ipynb  data_cleaning.ipynb  data_engineering.ipynb  feature_engineering.ipynb  inference.ipynb  jc_clean.ipynb  user_data.ipynb
scripts/: run_clean.py  run_features.py  run_ingestion.py  run_pipeline.py
src/manga_recs/: cli.py
src/manga_recs/api/: main.py  schemas.py
src/manga_recs/common/: __init__.py  constants.py  paths.py  settings.py
src/manga_recs/data/: __init__.py  cleaning.py  features.py  ingestion.py
src/manga_recs/data/extract/: __init__.py  pull_manga.py  pull_userdata.py
src/manga_recs/data/load/: s3.py
src/manga_recs/data/transform/: clean.py  feature_engineering.py
src/manga_recs/data_engineering/: utils.py
src/manga_recs/data_engineering/extract/: pull_userdata.py
src/manga_recs/data_engineering/extract/queries/: manga_metadata.graphql  user_readdata.graphql
src/manga_recs/data_engineering/ingestion/: __init__.py  pull_manga.py  pull_userdata.py  rate_limiter.py  s3.py
src/manga_recs/data_engineering/ingestion/queries/: manga_metadata.graphql
src/manga_recs/data_engineering/load/: __init__.py  s3.py
src/manga_recs/data_engineering/processing/: __init__.py  clean.py
src/manga_recs/data_engineering/transform/: __init__.py  clean.py  feature_engineering.py
src/manga_recs/inference/: inference.py
src/manga_recs/ml/: train_similarity.py
src/manga_recs/models/: train_similarity.py
src/manga_recs/pipelines/: orchestrator.py  run_clean.py  run_feature_engineering.py  run_ingestion.py  run_pipelines.py
src/manga_recs/serving/: recommender.py
tests/: README.md  __init__.py  conftest.py
tests/api/: test_recommendations.py
tests/e2e/: __init__.py
tests/ml/: __init__.py  test_feature_engineering.py
tests/unit/api/: test_main.py
tests/unit/data_engineering/: test_clean.py  test_utils.py
