[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-recs"
version = "0.1.0"
description = "A manga recommendation including data ingestion + ml package"
authors = [
    { name="Manny Kim", email="emmanuelkim2004@gmail.com" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]