[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-recs"
version = "0.1.0"
description = "A manga recommendation system with data ingestion, ML training, and API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name="Manny Kim", email="emmanuelkim2004@gmail.com" }
]
keywords = ["manga", "recommendation-system", "machine-learning", "anilist"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "mlflow>=2.8.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.scripts]
manga-recs-api = "manga_recs.api.main:start_server"
manga-recs-pipeline = "manga_recs.pipelines.run_pipelines:run_pipeline"
manga-recs-train = "manga_recs.ml.train_similarity:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=manga_recs --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "env"]
skips = ["B101"]  # Skip assert_used test