[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-recs"
version = "0.1.0"
description = "A manga recommendation including data ingestion + ml package"
requires-python = ">=3.10"
authors = [
    { name="Manny Kim", email="emmanuelkim2004@gmail.com" }
]
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.110",
    "joblib>=1.3",
    "mlflow>=2.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "tomli>=2.0; python_version < '3.11'",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
manga-recs = "manga_recs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]